--- a/Cyber/Cyber.html
+++ b/Cyber/Cyber.html
@@ -354,7 +354,7 @@ r4Hi6tpqywdNYpbl2M8PKvON1hRt5MQ4PWXUBiHb7OFgxt6BHP7XxEZtXVxptgZn
     <footer class="kaliSVG">
         © Raykesh 2024. All rights reserved.
     </footer>
-    <script async defer src="./Cyber.js" charset="UTF-8"></script>
+    <!-- <script async defer src="./Cyber.js" charset="UTF-8"></script> -->
     <script charset="UTF-8">
             
         console.log("test");
@@ -400,6 +400,7 @@ r4Hi6tpqywdNYpbl2M8PKvON1hRt5MQ4PWXUBiHb7OFgxt6BHP7XxEZtXVxptgZn
         // }
         function testInput_RSA() {
             //Chiffrement RSA 
+            console.log("Input_RSA lancer");
             var encrypt = new JSEncrypt();
             encrypt.setPublicKey(document.getElementById("pubkey").value);
             // var encrypted = encrypt.encrypt($('#input').val());// Encrypt with the public key...
