On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   Cyber/Cyber.html

--- a/Cyber/Cyber.html
+++ b/Cyber/Cyber.html
@@ -9,6 +9,7 @@
     <link rel="icon" type="image/x-icon" href="./../images/iconeDeBase.ico?">
     <meta name="author" content="Raykesh" />
     <meta name="keywords" content="Cyber">
+    <meta name="description" content=" Page Cyber principale du site, avec de la documentation sur différent aspect de la Cybersécurité. ">
     <title>Cyber</title>
     <link rel="stylesheet" href="styleCyber.css">
     <style>
