On branch main Your branch is ahead of 'origin/main' by 1 commit.   (use "git push" to publish your local commits)
Changes to be committed:
	modified:   Cyber/Cyber.html

--- a/Cyber/Cyber.html
+++ b/Cyber/Cyber.html
@@ -346,7 +346,7 @@ r4Hi6tpqywdNYpbl2M8PKvON1hRt5MQ4PWXUBiHb7OFgxt6BHP7XxEZtXVxptgZn
         En cas de bug, notamment sur github : <button onclick="testInput_RSA()"></button><br>
         
         Il existe donc plusieurs manières de chiffrer les données, même si on peut aussi les combiner.
-        <span style="color: rgb(116, 5, 5);">Merci d'avoir tout lue ! ! !</span>
+        <span style="color: rgb(116, 5, 5);">Merci d'avoir tout lu ! ! !</span>
         <h3 id="Item3">Item 3</h3>    
         </section>
         <div class="fin"></div>
