On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   Cyber/Red Team/privateRed.html
	modified:   Cyber/Red Team/publicRed.html

--- a/Cyber/Red Team/publicRed.html
+++ b/Cyber/Red Team/publicRed.html
@@ -1,2 +1,15 @@
-var encrypt = new JSEncrypt();
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    
+</body>
+</html>
+<script>
+    var encrypt = new JSEncrypt();
     encrypt.setPublicKey(document.getElementById("pubkey").value);
+</script>
