--- a/Cyber/Red Team/privateRed.html
+++ b/Cyber/Red Team/privateRed.html
@@ -1,2 +1,15 @@
-var decrypt = new JSEncrypt();
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    
+</body>
+</html>
+<script>
+    var decrypt = new JSEncrypt();
     decrypt.setPrivateKey(document.getElementById("privkey").value);
+</script>
