--- a/Cyber/Red Team/publicRed.html
+++ b/Cyber/Red Team/publicRed.html
@@ -4,7 +4,21 @@
     <meta charset="UTF-8">
 </head>
 <body hidden>
-    
+    <label for="pubkey">Public Key</label><br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;...
+    <textarea id="pubkey" rows="15" cols="65" hidden>-----BEGIN PUBLIC KEY-----
+MIICIjANBgkqhkiG9w0BAQEFAAOCAg8AMIICCgKCAgEAsnsWwp7qNrXklcRtLTSD
+5hIyJ00JjEp3tWhoFzD0Ah+yG3TqK7yNul443bEsl0HZ1CndzoXFgmxXs33ySVOT
+FnSi1yyF6GMw4Hpr1u1Evvd8hsAP9ezAny7f+GSSPL0mI8YwI2rCNm2UVWJvEWH+
+zQOz02WAyvbE1zLr8aKAHHee2ubsaM0A8t/IOjElV/mwfGQnM45prrgDtBEuFuPi
+tgkzL1YOimT6TqyCtgcXypsg8c6vTXBhzOlY5J8bh/7pyYZUKOAaQwT6+7rQqTyd
+dKdmcP08kmpXutwaHQjsImTce8NlbBvlYZXOHZmBphg6x9POUGOB+VP2LP5KxZvX
+Y0/BH50Ma/1nC53Nbsb7GswgE+fPJV0WJWtS46CEnMOt3WQjr4wz/uq4+hZKf8LG
+N6RfIV864KWYEZpUNoRO9B8CdbumcLOTQbOWNOgHBOfa3dXJpIWfnZHPnyqhAQ+b
+9fun4sWCY1iO2Zsjh3pxugCrFRcx9XQOfF3sUEJKAxaBd0TjBc1sYxm1xbW0lbmR
+r4Hi6tpqywdNYpbl2M8PKvON1hRt5MQ4PWXUBiHb7OFgxt6BHP7XxEZtXVxptgZn
+9Nj9l1yAMTEFVkUHF/BqeNUR/Lr5Ddbe4u3LLbTqZAhWAIyeBr54Iwmp8HKiZCGV
+8j0FhGOnQYRlR+e4hPexo/ECAwEAAQ==
+-----END PUBLIC KEY-----</textarea><br/>
 </body>
 </html>
 <script>
