On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	new file:   Cyber/Red Team/.gitignore
	modified:   Cyber/Red Team/privateRed.html
	modified:   Cyber/Red Team/publicRed.html

--- a/Cyber/Red Team/privateRed.html
+++ b/Cyber/Red Team/privateRed.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
 </head>
 <body hidden>
+    <!-- à Changer -->
     <label for="privkey">Private Key</label><br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;...
     <textarea id="privkey" rows="15" cols="65" hidden>-----BEGIN RSA PRIVATE KEY-----
 MIIJKAIBAAKCAgEAsnsWwp7qNrXklcRtLTSD5hIyJ00JjEp3tWhoFzD0Ah+yG3Tq
