--- a/Cyber/Red Team/publicRed.html
+++ b/Cyber/Red Team/publicRed.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
 </head>
 <body hidden>
+    <!-- à Changer -->
     <label for="pubkey">Public Key</label><br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;...
     <textarea id="pubkey" rows="15" cols="65" hidden>-----BEGIN PUBLIC KEY-----
 MIICIjANBgkqhkiG9w0BAQEFAAOCAg8AMIICCgKCAgEAsnsWwp7qNrXklcRtLTSD
