On branch main Your branch is ahead of 'origin/main' by 1 commit.   (use "git push" to publish your local commits)
Changes to be committed:
	modified:   Cyber/Red Team/RedTeam.html

--- a/Cyber/Red Team/RedTeam.html
+++ b/Cyber/Red Team/RedTeam.html
@@ -25,7 +25,9 @@
     <h4>merci</h4>
 </body>
 </html>
+<script src="../jsencrypt.min.js"></script>
 <script>
+    console.log(" Red Team Part ")
     Red_RSA("inputBody","pubkeyRed","privkeyRed")
     function Red_RSA(input="input",pubkey="pubkey",privkey="privkey", chiffrer=true) {
         //Prototype de Chiffrement RSA 
