On branch main Your branch is ahead of 'origin/main' by 4 commits.   (use "git push" to publish your local commits)
Changes to be committed:
	modified:   Cyber/Red Team/RedTeam.html

--- a/Cyber/Red Team/RedTeam.html
+++ b/Cyber/Red Team/RedTeam.html
@@ -23,8 +23,8 @@
     <h1>Bienvenue Dans la partie cyber</h1>
     <h3>patience c'est en cours</h3>
     <h4>merci</h4>
-    <iframe src="privateRed.html" frameborder="0"></iframe>
-    <iframe src="publicRed.html" frameborder="10"></iframe>
+    <!-- <iframe src="privateRed.html" frameborder="0"></iframe>
+    <iframe src="publicRed.html" frameborder="10"></iframe> -->
 </body>
 </html>
 <script src="../jsencrypt.min.js"></script>
