--- a/Cyber/Red Team/RedTeam.html
+++ b/Cyber/Red Team/RedTeam.html
@@ -25,6 +25,8 @@
     <h4>merci</h4>
     <!-- <iframe src="privateRed.html" frameborder="0"></iframe>
     <iframe src="publicRed.html" frameborder="10"></iframe> -->
+    <div html_Inclusion="privateRed.html"></div>
+    <script>htmlInclusion();</script>
 </body>
 </html>
 <script src="../jsencrypt.min.js"></script>
