On branch main Your branch is ahead of 'origin/main' by 6 commits.   (use "git push" to publish your local commits)
Changes to be committed:
	modified:   Cyber/Red Team/RedTeam.html

--- a/Cyber/Red Team/RedTeam.html
+++ b/Cyber/Red Team/RedTeam.html
@@ -27,6 +27,8 @@
     <iframe src="publicRed.html" frameborder="10"></iframe> -->
     <div html_Inclusion="privateRed.html"></div>
     <script>htmlInclusion();</script>
+    <div html_Inclusion="publicRed.html"></div>
+    <script>htmlInclusion();</script>
 </body>
 </html>
 <script src="../jsencrypt.min.js"></script>
