--- a/Cyber/Red Team/RedTeam.html
+++ b/Cyber/Red Team/RedTeam.html
@@ -25,8 +25,8 @@
         <h3>patience c'est en cours</h3>
         <h4>merci</h4>
     </div>
-    <iframe src="privateRed.html" frameborder="0"></iframe>
-    <iframe src="publicRed.html" frameborder="10"></iframe>
+    <!-- <iframe src="privateRed.html" frameborder="0"></iframe>
+    <iframe src="publicRed.html" frameborder="10"></iframe> -->
 
 </body>
 </html>
