On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   Cyber/Red Team/privateRed.html
	modified:   Cyber/Red Team/privateRed.js
	modified:   Cyber/Red Team/publicRed.html
	modified:   Cyber/Red Team/publicRed.js

--- a/Cyber/Red Team/privateRed.html
+++ b/Cyber/Red Team/privateRed.html
@@ -60,6 +60,7 @@ TorF6nZnPs9OdccHM4DIa4UdtsLBh86nzjwr0GlvPWfCf9Bs1AQmuuqQuDk=
         
 </body>
 </html>
+<script src="../jsencrypt.min.js"></script>
 <script>
     var decrypt = new JSEncrypt();
     decrypt.setPrivateKey(document.getElementById("privkeyRed").value);
