On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   Cyber/Red Team/RedTeam.html

--- a/Cyber/Red Team/RedTeam.html
+++ b/Cyber/Red Team/RedTeam.html
@@ -31,8 +31,8 @@
 </body>
 </html>
 <script src="../jsencrypt.min.js"></script>
-<script type="module" src="./privateRed.js"></script>
-<script type="module" src="./publicRed.js"></script>
+<script src="./privateRed.js"></script>
+<script src="./publicRed.js"></script>
 <script>
     console.log(" Red Team Part ")
     // import * as nom from "./publicRed.js"
