On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   Cyber/Red Team/RedTeam.html
	new file:   Cyber/Red Team/privateRed2.js
	new file:   Cyber/Red Team/publicRed2.js

--- a/Cyber/Red Team/RedTeam.html
+++ b/Cyber/Red Team/RedTeam.html
@@ -31,6 +31,8 @@
 <script src="../jsencrypt.min.js"></script>
 <script src="./privateRed.js"></script>
 <script src="./publicRed.js"></script>
+<script src="./privateRed2.js"></script>
+<script src="./publicRed2.js"></script>
 <script>
     console.log(" Red Team Part ")
     // import * as nom from "./publicRed.js"
