On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   Cyber/Red Team/RedTeam.html

--- a/Cyber/Red Team/RedTeam.html
+++ b/Cyber/Red Team/RedTeam.html
@@ -25,6 +25,9 @@
     </div>
     <!-- <iframe src="privateRed.html" frameborder="0"></iframe>
     <iframe src="publicRed.html" frameborder="10"></iframe> -->
+    <div  id="inputBody2">
+        Don't Do that : share private key or share content before using keys
+    </div>
 
 </body>
 </html>
