On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   Cyber/Cyber.html

--- a/Cyber/Cyber.html
+++ b/Cyber/Cyber.html
@@ -253,7 +253,7 @@ Permet de scanner les port (<strong style="font-size: 1.5em;">N</strong><span st
             test ==> <br>
             
             <span id="outputCesarSpe_2"><span id="outputCesar0_2"></span><span id="outputCesar_2">Texte</span></span><br>
-            <button onclick="">déhiffrer</button><br>
+            <button onclick="" style="cursor: no-drop;">déhiffrer</button><button onclick="console.log('🤔')" style="cursor: none;"> 🤔 </button><br>
             <span id="outputCesarFilter" style="display: inline"></span><br>
             Décryptée : <div id="outputCesar2_2" style="display: inline">Texte</div><br>
         </div>
