_debug = false On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   Cyber/Cyber.html

--- a/Cyber/Cyber.html
+++ b/Cyber/Cyber.html
@@ -519,7 +519,7 @@ r4Hi6tpqywdNYpbl2M8PKvON1hRt5MQ4PWXUBiHb7OFgxt6BHP7XxEZtXVxptgZn
         function encodeCesarUTF8(text, shift=0) {
             // const text = 'Texte_TesteCesar_2abcABC';
             
-            _debug = true
+            _debug = false
             if(_debug){console.log("encodeCesarUTF8 debuggage")}
             if(_debug){console.log(text)}
             if(_debug){console.log(shift)}
@@ -551,7 +551,7 @@ r4Hi6tpqywdNYpbl2M8PKvON1hRt5MQ4PWXUBiHb7OFgxt6BHP7XxEZtXVxptgZn
         }
         var alphabet = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ';
         function encodeCaesar(msg, n, Decodage) {
-            _debug = true
+            _debug = false
             console.log(_debug)
             if(_debug){console.log("encodeCaesar debuggage")}
             if(_debug){console.log(msg)}
@@ -569,7 +569,7 @@ r4Hi6tpqywdNYpbl2M8PKvON1hRt5MQ4PWXUBiHb7OFgxt6BHP7XxEZtXVxptgZn
 
         function shiftlettre(lettre, n) {
             var indice = alphabet.indexOf(lettre.toUpperCase());
-            _debug = true
+            _debug = false
             if(_debug){console.log(['lettre',lettre,'indice',indice,'n',n])}
 
 
