--- a/Cyber/Red Team/RedTeam.html
+++ b/Cyber/Red Team/RedTeam.html
@@ -103,7 +103,7 @@
 
 
     const delay = ms => new Promise(res => setTimeout(res, ms));
-    async function MaFonctionQuiAttend() {
+    async function MaFonctionPrincipaleQuiAttend() {
         await delay(1000);
         console.log("Waited 1s");
         await delay(1500);
@@ -113,5 +113,5 @@
         await delay(5000);
         console.log("Waited 10s");
     };
-    MaFonctionQuiAttend()
+    MaFonctionPrincipaleQuiAttend()
 </script>
