--- a/Cyber/Red Team/RedTeam.html
+++ b/Cyber/Red Team/RedTeam.html
@@ -104,6 +104,7 @@
 
     const delay = ms => new Promise(res => setTimeout(res, ms));
     async function MaFonctionPrincipaleQuiAttend() {
+        // main  
         await delay(1000);
         console.log("Waited 1s");
         await delay(1500);
