On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   Cyber/Red Team/RedTeam.html

--- a/Cyber/Red Team/RedTeam.html
+++ b/Cyber/Red Team/RedTeam.html
@@ -61,6 +61,7 @@
 <script src="./publicRed.js"></script>
 <script src="./privateRed2.js"></script>
 <script src="./publicRed2.js"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script>
     console.log(" Red Team Part ")
     // import * as nom from "./publicRed.js"
@@ -113,6 +114,8 @@
         console.log("Waited 5s");
         await delay(5000);
         console.log("Waited 10s");
+        beginng = document.getElementsByClassName("beginng")
+        beginng.style.display = 'none';
     };
     MaFonctionPrincipaleQuiAttend()
 </script>
