On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   Cyber/Red Team/RedTeam.html

--- a/Cyber/Red Team/RedTeam.html
+++ b/Cyber/Red Team/RedTeam.html
@@ -114,7 +114,7 @@
         console.log("Waited 5s");
         await delay(5000);
         console.log("Waited 10s");
-        beginng = document.getElementsByClassName("beginng")
+        let beginng = document.getElementsByClassName("beginng")
         beginng.style.display = 'none';
     };
     MaFonctionPrincipaleQuiAttend()
