On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   Cyber/Red Team/RedTeam.html

--- a/Cyber/Red Team/RedTeam.html
+++ b/Cyber/Red Team/RedTeam.html
@@ -115,6 +115,7 @@
         await delay(5000);
         console.log("Waited 10s");
         var beginng = document.getElementsByClassName("beginng")[0].style.display = 'none';
+        // D'autre solution : 
         // $(".beginng").hide();
         // var beginng = document.getElementById("beginng").style.display = 'none';
         // $("#beginng").hide();
