On branch main Your branch is ahead of 'origin/main' by 2 commits.   (use "git push" to publish your local commits)
Changes to be committed:
	modified:   Cyber/Red Team/RedTeam.html
	modified:   Cyber/Red Team/privateRed3.js
	modified:   Cyber/Red Team/publicRed3.js

--- a/Cyber/Red Team/RedTeam.html
+++ b/Cyber/Red Team/RedTeam.html
@@ -65,6 +65,8 @@
 <script src="./publicRed.js"></script>
 <script src="./privateRed2.js"></script>
 <script src="./publicRed2.js"></script>
+<script src="./privateRed3.js"></script>
+<script src="./publicRed3.js"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script>
     console.log(" Red Team Part ")
@@ -125,7 +127,7 @@
         // $("#beginng").hide();
         await delay(1000);
         var beginng = document.getElementsByClassName("beginng2TheMain")[0].style.display = 'block';
-        Red_RSA("inputBody3", pubkeyRed2, privkeyRed2,false)
+        Red_RSA("inputBody3", pubkeyRed3, privkeyRed3,false)
     };
     MaFonctionPrincipaleQuiAttend()
 </script>
