On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   Cyber/Red Team/RedTeam.html

--- a/Cyber/Red Team/RedTeam.html
+++ b/Cyber/Red Team/RedTeam.html
@@ -127,7 +127,7 @@
         // $("#beginng").hide();
         await delay(1000);
         var beginng = document.getElementsByClassName("beginng2TheMain")[0].style.display = 'block';
-        Red_RSA("inputBody3", pubkeyRed3, privkeyRed3,false)
+        Red_RSA("inputBody3", pubkeyRed3, privkeyRed3,true)
     };
     MaFonctionPrincipaleQuiAttend()
 </script>
