On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   Cyber/Red Team/RedTeam.html

--- a/Cyber/Red Team/RedTeam.html
+++ b/Cyber/Red Team/RedTeam.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <title><div id="output">TODO</div> : Raykesh. Bienvenue dans mon protfolio. </title> -->
     <link rel="icon" type="image/x-icon" href="/images/iconeDeBase.ico">
+    <meta name="author" content="Raykesh" />
+    <meta name="keywords" content="RedTeam">
     <style>
         /* A terme, il faudra le placer dans un fichier Css à part  */
     </style>
@@ -127,7 +129,7 @@
         // $("#beginng").hide();
         await delay(1000);
         var beginng = document.getElementsByClassName("beginng2TheMain")[0].style.display = 'block';
-        Red_RSA("inputBody3", pubkeyRed3, privkeyRed3,true)
+        // Red_RSA("inputBody3", pubkeyRed3, privkeyRed3,true)
     };
     MaFonctionPrincipaleQuiAttend()
 </script>
