Différente key for the same page On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   Cyber/Red Team/RedTeam.html
	modified:   Cyber/Red Team/privateRed3.js
	modified:   Cyber/Red Team/publicRed3.js

--- a/Cyber/Red Team/RedTeam.html
+++ b/Cyber/Red Team/RedTeam.html
@@ -169,22 +169,23 @@
         // $("#beginng").hide();
         await delay(1000*_debug_Speed);
         var beginng = document.getElementsByClassName("beginng2TheMain")[0].style.display = 'block';
-        Red_RSA("inputBody3", pubkeyRed3, privkeyRed3,false)
-        Red_RSA("inputBody3.001", pubkeyRed3, privkeyRed3,false)
-        Red_RSA("inputBody3.002", pubkeyRed3, privkeyRed3,false)
-        Red_RSA("inputBody3.003", pubkeyRed3, privkeyRed3,false)
-        Red_RSA("inputBody3.010", pubkeyRed3, privkeyRed3,false)
-        Red_RSA("inputBody3.011", pubkeyRed3, privkeyRed3,false)
-        Red_RSA("inputBody3.012", pubkeyRed3, privkeyRed3,false)
-        Red_RSA("inputBody3.013", pubkeyRed3, privkeyRed3,false)
-        Red_RSA("inputBody3.014", pubkeyRed3, privkeyRed3,false)
-        Red_RSA("inputBody3.015", pubkeyRed3, privkeyRed3,false)
-        Red_RSA("inputBody3.016", pubkeyRed3, privkeyRed3,false)
-        Red_RSA("inputBody3.017", pubkeyRed3, privkeyRed3,false)
-        Red_RSA("inputBody3.018", pubkeyRed3, privkeyRed3,false)
-        Red_RSA("inputBody3.019", pubkeyRed3, privkeyRed3,false)
-        Red_RSA("inputBody3.020", pubkeyRed3, privkeyRed3,false)
+        Red_RSA("inputBody3", pubkeyRed2, privkeyRed2,false)
+        Red_RSA("inputBody3.001", pubkeyRed2, privkeyRed2,false)
+        Red_RSA("inputBody3.002", pubkeyRed2, privkeyRed2,false)
+        Red_RSA("inputBody3.003", pubkeyRed2, privkeyRed2,false)
+        Red_RSA("inputBody3.010", pubkeyRed2, privkeyRed2,false)
+        Red_RSA("inputBody3.011", pubkeyRed2, privkeyRed2,false)
+        Red_RSA("inputBody3.012", pubkeyRed2, privkeyRed2,false)
+        Red_RSA("inputBody3.013", pubkeyRed2, privkeyRed2,false)
+        Red_RSA("inputBody3.014", pubkeyRed2, privkeyRed2,false)
+        Red_RSA("inputBody3.015", pubkeyRed2, privkeyRed2,false)
+        Red_RSA("inputBody3.016", pubkeyRed2, privkeyRed2,false)
+        Red_RSA("inputBody3.017", pubkeyRed2, privkeyRed2,false)
+        Red_RSA("inputBody3.018", pubkeyRed2, privkeyRed2,false)
+        Red_RSA("inputBody3.019", pubkeyRed2, privkeyRed2,false)
+        Red_RSA("inputBody3.020", pubkeyRed2, privkeyRed2,false)
         await delay(5000*_debug_Speed);
+        // Red_RSA("inputBody3.021", pubkeyRed3, privkeyRed3,true)
     };
     MaFonctionPrincipaleQuiAttend()
 </script>
