--- a/Cyber/Red Team/RedTeam.html
+++ b/Cyber/Red Team/RedTeam.html
@@ -7,6 +7,7 @@
     <link rel="icon" type="image/x-icon" href="/images/iconeDeBase.ico">
     <meta name="author" content="Raykesh" />
     <meta name="keywords" content="RedTeam">
+    <title>Autogenerate</title>
     <style>
         /* A terme, il faudra le placer dans un fichier Css à part  */
     </style>
@@ -153,7 +154,7 @@
     const delay = ms => new Promise(res => setTimeout(res, ms));
     async function MaFonctionPrincipaleQuiAttend() {
         // main  
-        var _debug_Speed = 0.01;
+        var _debug_Speed = 0.01; // Set to 1
         await delay(1000*_debug_Speed);
         console.log("Waited 1s");
         await delay(1500*_debug_Speed);
